--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -136,3 +136,17 @@ jobs:
 
       - name: Run rpmlint
         run: rpmlint rpmbuild/SRPMS/*
+
+  gitlab-ci-helper:
+    name: "Gitlab CI trigger helper"
+    runs-on: ubuntu-latest
+    env:
+      SKIP_CI: ${{ (github.event.pull_request.draft == true || contains(github.event.pull_request.labels.*.name, 'WIP')) && !contains(github.event.pull_request.labels.*.name, 'WIP+test') }}
+    steps:
+      - name: Write PR status
+        run: echo "$SKIP_CI" > SKIP_CI.txt
+      - name: Upload status
+        uses: actions/upload-artifact@v3
+        with:
+          name: PR_STATUS
+          path: SKIP_CI.txt
