packer: move worker-config creation to ansible
I think it untangles the initialization a bit and allows me to do some more
refactorings.

Signed-off-by: Ondřej Budai <ondrej@budai.cz>

--- a/templates/packer/ansible/roles/common/tasks/main.yml
+++ b/templates/packer/ansible/roles/common/tasks/main.yml
@@ -9,5 +9,8 @@
 # Configure worker initialization service.
 - include_tasks: worker-initialization-service.yml
 
+# Configure the worker.
+- include_tasks: worker-config.yml
+
 - name: Ensure SELinux contexts are updated
   command: restorecon -Rv /etc
