container: make liveness probe independent of webserver
Currently liveness and readiness was treated the same. However, their
behaviour at shutdown is meant to be different. When a service is not read
no new connections are made to it, and when a service is not live it can be
cleaned up.

By considering our service live if and only if it listens to HTTP requests we
don't have the opportunity to clean up after we stop listening to new requests.

Leave readiness probes as they are, and instead use a file in the filesystem to
indicate when the service is live. It is created before composer is spawned and
deleted once composer exits.

--- a/templates/composer.yml
+++ b/templates/composer.yml
@@ -41,10 +41,10 @@ objects:
           name: composer
           livenessProbe:
             failureThreshold: 3
-            httpGet:
-              path: ${LIVENESS_URI}
-              port: ${{COMPOSER_API_PORT}}
-              scheme: HTTP
+            exec:
+              command:
+              - cat
+              - /tmp/live
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 1
