--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -118,7 +118,7 @@ Container:
   parallel:
     matrix:
       - RUNNER:
-          - aws/centos-stream-8-x86_64
+          - aws/rhel-8.5-ga-x86_64
 
 Packer:
   stage: test
