ci/details: list system repositories and run in after_script too
It is good to know what system repositories are used exactly on the
runner. Also running the ci_details.sh in after_script can help during
any debugging as packages that got updated or installed during the run
can be easily identified.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,8 +8,9 @@ stages:
 
 .base:
   before_script:
-    - schutzbot/ci_details.sh > ci-details
+    - schutzbot/ci_details.sh > ci-details-before-run
   after_script:
+    - schutzbot/ci_details.sh > ci-details-after-run
     - schutzbot/update_github_status.sh update
     - schutzbot/save_journal.sh
     - schutzbot/run_cloud_cleaner.sh
@@ -20,7 +21,8 @@ stages:
     paths:
       - journal-log.gpg
       - ci-artifacts
-      - ci-details
+      - ci-details-before-run
+      - ci-details-after-run
       - "*.repo"
       - COMPOSER_NVR
     when: always
@@ -77,9 +79,6 @@ RPM:
     - !reference [.build_rules, rules]
   script:
     - sh "schutzbot/mockbuild.sh"
-  after_script:
-    - schutzbot/update_github_status.sh update
-    - schutzbot/save_journal.sh
   parallel:
     matrix:
       - RUNNER:
