--- a/.github/workflows/create-tag.yml
+++ b/.github/workflows/create-tag.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Upstream tag
         uses: osbuild/release-action@create-tag
-        if: ${{ env.WEEK == 'odd' }}
+        if: ${{ env.WEEK == 'odd' || github.event_name != 'schedule' }}
         with:
           token: "${{ secrets.SCHUTZBOT_GITHUB_ACCESS_TOKEN }}"
           username: "imagebuilder-bot"
