--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -392,6 +392,9 @@ API:
           - aws/rhel-8.6-nightly-x86_64
           - aws/rhel-9.0-nightly-x86_64
         INTERNAL_NETWORK: ["true"]
+      - IMAGE_TYPE: ["edge-commit"]
+        RUNNER:
+          - aws/fedora-35-x86_64
 
 libvirt:
   stage: test
