--- a/templates/composer.yml
+++ b/templates/composer.yml
@@ -44,7 +44,7 @@ objects:
             exec:
               command:
               - cat
-              - /tmp/live
+              - /tmp/osbuild-composer-live
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 1
