tests: Start executing Image Tests for PRs
Refs: COMPOSER-1399

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -264,6 +264,7 @@ Image Tests:
   stage: test
   extends: .terraform
   rules:
+    - !reference [.upstream_rules, rules]
     - !reference [.nightly_rules, rules]
   script:
     - schutzbot/deploy.sh
