ci: do not download artifacts in finish stages
The jobs in finish stage are only meant to report the overall status of
the pipeline, they do not require to download the hundreds of artifacts
from the previous stages.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -531,6 +531,7 @@ Upgrade:
 
 NIGHTLY_FAIL:
   stage: finish
+  dependencies: []
   tags:
     - shell
   rules:
@@ -541,6 +542,7 @@ NIGHTLY_FAIL:
 
 NIGHTLY_SUCCESS:
   stage: finish
+  dependencies: []
   tags:
     - shell
   rules:
@@ -591,6 +593,7 @@ SonarQube:
 
 finish:
   stage: finish
+  dependencies: []
   tags:
     - shell
   script:
