--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -525,6 +525,7 @@ Upgrade:
 
 NIGHTLY_FAIL:
   stage: finish
+  dependencies: []
   tags:
     - shell
   rules:
@@ -535,6 +536,7 @@ NIGHTLY_FAIL:
 
 NIGHTLY_SUCCESS:
   stage: finish
+  dependencies: []
   tags:
     - shell
   rules:
@@ -585,6 +587,7 @@ SonarQube:
 
 finish:
   stage: finish
+  dependencies: []
   tags:
     - shell
   script:
