Refuse manual start of `osbuild-composer.service`
The `osbuild-composer.service` unit should be started only by one of the
Socket units. Starting it manually by the user results in unexpected
behavior and in general non-functional osbuild-composer service.

Related to https://bugzilla.redhat.com/show_bug.cgi?id=2072488

--- a/distribution/osbuild-composer.service
+++ b/distribution/osbuild-composer.service
@@ -8,6 +8,9 @@ After=network.target
 # to disable it.
 Wants=osbuild-worker@1.service
 
+# This unit should be started only via a socket unit
+RefuseManualStart=true
+
 [Service]
 Type=simple
 ExecStart=/usr/libexec/osbuild-composer/osbuild-composer
