--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -320,6 +320,7 @@ New OSTree:
   parallel:
     matrix:
       - RUNNER:
+          - rhos-01/fedora-35-x86_64-large
           - rhos-01/rhel-8.6-nightly-x86_64-large
           - rhos-01/rhel-9.0-nightly-x86_64-large
           - rhos-01/centos-stream-8-x86_64-large
