Nightly testing: remove edge testing from nightly pipelines
All of the edge tests are being ran on every nightly compose inside
virt-qe Jenkins so no need to run all of them here as well. Keep just
ostree-raw-image.sh to cover edge testing for sign-off.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -297,7 +297,6 @@ OSTree:
   extends: .terraform/openstack
   rules:
     - !reference [.upstream_rules, rules]
-    - !reference [.nightly_rules, rules]
   script:
     - schutzbot/deploy.sh
     - /usr/libexec/tests/osbuild-composer/ostree.sh
@@ -343,6 +342,12 @@ OSTree simplified installer:
 OSTree raw image:
   stage: test
   extends: OSTree
+  rules:
+    # run only this edge test on nightly to have some testing for sign-off
+    # but still reduce duplication with virt-qe Jenkins and increase nightly
+    # pipelines stability
+    - !reference [.upstream_rules, rules]
+    - !reference [.nightly_rules, rules]
   script:
     - schutzbot/deploy.sh
     - /usr/libexec/tests/osbuild-composer/ostree-raw-image.sh
