packit: Enable Koji build integration
Also drop the create_pr option, which was dropped by Packit.

--- a/.packit.yaml
+++ b/.packit.yaml
@@ -17,8 +17,12 @@ srpm_build_deps: []
 actions:
   get-current-version: bash -c "git describe --tags --abbrev=0 | sed 's|v||'"
 
-create_pr: false
 jobs:
+- job: koji_build
+  trigger: commit
+  metadata:
+    dist_git_branches:
+      - fedora-all
 - job: propose_downstream
   trigger: release
   metadata:
