templates/composer: give access to private quay repos

--- a/templates/composer.yml
+++ b/templates/composer.yml
@@ -186,7 +186,7 @@ objects:
   metadata:
     name: image-builder
   imagePullSecrets:
-  - name: quay-cloudservices-pull
+  - name: default-dockercfg-8bg88
 
 - apiVersion: v1
   kind: Service
