--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,10 +11,10 @@ stages:
     - schutzbot/ci_details.sh > ci-details-before-run
     - cat schutzbot/team_ssh_keys.txt | tee -a ~/.ssh/authorized_keys > /dev/null
   after_script:
-    - schutzbot/ci_details.sh > ci-details-after-run
-    - schutzbot/update_github_status.sh update
-    - schutzbot/save_journal.sh
-    - schutzbot/run_cloud_cleaner.sh
+    - schutzbot/ci_details.sh > ci-details-after-run || true
+    - schutzbot/update_github_status.sh update || true
+    - schutzbot/save_journal.sh || true
+    - schutzbot/run_cloud_cleaner.sh || true
   interruptible: true
   tags:
     - terraform
