--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -251,6 +251,11 @@ regression-include-excluded-packages:
     SCRIPT: regression-include-excluded-packages.sh
 
 regression-old-worker-new-composer:
+  parallel:
+    matrix:
+      - RUNNER:
+          - aws/rhel-8.5-ga-x86_64
+        INTERNAL_NETWORK: ["true"]
   extends: .regression
   variables:
     SCRIPT: regression-old-worker-new-composer.sh
